--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/utils": "^4.11.2",
     "@mui/icons-material": "^5.2.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -14,7 +15,10 @@
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-ga": "^3.3.0",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "4.0.3",
     "reactstrap": "^9.0.1",
     "redux": "^4.1.2",
